@@ -3,7 +3,7 @@ package com.hartwig.hmftools.lilac;
 import static java.lang.Math.floor;
 import static java.lang.String.format;
 
-import static com.hartwig.hmftools.common.utils.PerformanceCounter.runTimeMinsStr;
+import static com.hartwig.hmftools.common.perf.PerformanceCounter.runTimeMinsStr;
 import static com.hartwig.hmftools.common.utils.file.FileDelimiters.ITEM_DELIM;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
 import static com.hartwig.hmftools.lilac.LilacConstants.APP_NAME;
@@ -11,57 +11,23 @@ import static com.hartwig.hmftools.lilac.LilacConstants.BASE_QUAL_PERCENTILE;
 import static com.hartwig.hmftools.lilac.LilacConstants.HLA_A;
 import static com.hartwig.hmftools.lilac.LilacConstants.HLA_B;
 import static com.hartwig.hmftools.lilac.LilacConstants.HLA_C;
+import static com.hartwig.hmftools.lilac.LilacConstants.LOW_BASE_QUAL_THRESHOLD;
 import static com.hartwig.hmftools.lilac.LilacConstants.WARN_LOW_COVERAGE_DEPTH;
 import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
 import static com.hartwig.hmftools.lilac.ReferenceData.HLA_CONTEXT_FACTORY;
 import static com.hartwig.hmftools.lilac.ReferenceData.NUC_GENE_FRAG_ENRICHMENT;
+import static com.hartwig.hmftools.lilac.coverage.HlaComplex.findDuplicates;
+import static com.hartwig.hmftools.lilac.evidence.NucleotideFiltering.calcNucleotideHeterogygousLoci;
+import static com.hartwig.hmftools.lilac.fragment.FragmentScope.CANDIDATE;
+import static com.hartwig.hmftools.lilac.fragment.FragmentScope.SOLUTION;
 import static com.hartwig.hmftools.lilac.fragment.FragmentSource.TUMOR;
 import static com.hartwig.hmftools.lilac.fragment.NucleotideFragmentFactory.calculateGeneCoverage;
 import static com.hartwig.hmftools.lilac.seq.SequenceCount.extractHeterozygousLociSequences;
-import static com.hartwig.hmftools.lilac.evidence.NucleotideFiltering.calcNucleotideHeterogygousLoci;
-import static com.hartwig.hmftools.lilac.coverage.HlaComplex.findDuplicates;
-import static com.hartwig.hmftools.lilac.fragment.FragmentScope.CANDIDATE;
-import static com.hartwig.hmftools.lilac.fragment.FragmentScope.SOLUTION;
 import static com.hartwig.hmftools.lilac.variant.SomaticCodingCount.addVariant;
 
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
-import com.hartwig.hmftools.common.utils.TaskExecutor;
-import com.hartwig.hmftools.common.utils.config.ConfigBuilder;
-import com.hartwig.hmftools.lilac.coverage.HlaYCoverage;
-import com.hartwig.hmftools.lilac.evidence.Candidates;
-import com.hartwig.hmftools.lilac.coverage.FragmentAlleleMapper;
-import com.hartwig.hmftools.lilac.coverage.AlleleCoverage;
-import com.hartwig.hmftools.lilac.coverage.HlaComplex;
-import com.hartwig.hmftools.lilac.coverage.ComplexBuilder;
-import com.hartwig.hmftools.lilac.coverage.ComplexCoverage;
-import com.hartwig.hmftools.lilac.coverage.ComplexCoverageCalculator;
-import com.hartwig.hmftools.lilac.coverage.ComplexCoverageRanking;
-import com.hartwig.hmftools.lilac.coverage.HlaComplexFile;
-import com.hartwig.hmftools.lilac.evidence.PhasedEvidence;
-import com.hartwig.hmftools.lilac.fragment.AminoAcidFragmentPipeline;
-import com.hartwig.hmftools.lilac.hla.HlaAllele;
-import com.hartwig.hmftools.lilac.fragment.Fragment;
-import com.hartwig.hmftools.lilac.fragment.NucleotideFragmentFactory;
-import com.hartwig.hmftools.lilac.read.BamReader;
-import com.hartwig.hmftools.lilac.read.Indel;
-import com.hartwig.hmftools.lilac.seq.SequenceCount;
-import com.hartwig.hmftools.lilac.variant.CopyNumberAssignment;
-import com.hartwig.hmftools.lilac.qc.AminoAcidQC;
-import com.hartwig.hmftools.lilac.qc.BamQC;
-import com.hartwig.hmftools.lilac.qc.CoverageQC;
-import com.hartwig.hmftools.lilac.qc.HaplotypeQC;
-import com.hartwig.hmftools.lilac.qc.SolutionSummary;
-import com.hartwig.hmftools.lilac.qc.LilacQC;
-import com.hartwig.hmftools.lilac.qc.SomaticVariantQC;
-import com.hartwig.hmftools.lilac.coverage.FragmentAlleles;
-import com.hartwig.hmftools.lilac.read.BamRecordReader;
-import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
-import com.hartwig.hmftools.lilac.variant.SomaticCodingCount;
-import com.hartwig.hmftools.lilac.variant.SomaticVariant;
-import com.hartwig.hmftools.lilac.variant.SomaticVariantAnnotation;
-
+import java.io.File;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -71,7 +37,43 @@ import java.util.StringJoiner;
 import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
 
-import org.jetbrains.annotations.NotNull;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
+import com.hartwig.hmftools.common.perf.StackSampler;
+import com.hartwig.hmftools.common.perf.TaskExecutor;
+import com.hartwig.hmftools.common.utils.config.ConfigBuilder;
+import com.hartwig.hmftools.lilac.coverage.AlleleCoverage;
+import com.hartwig.hmftools.lilac.coverage.ComplexBuilder;
+import com.hartwig.hmftools.lilac.coverage.ComplexCoverage;
+import com.hartwig.hmftools.lilac.coverage.ComplexCoverageCalculator;
+import com.hartwig.hmftools.lilac.coverage.ComplexCoverageRanking;
+import com.hartwig.hmftools.lilac.coverage.FragmentAlleleMapper;
+import com.hartwig.hmftools.lilac.coverage.FragmentAlleles;
+import com.hartwig.hmftools.lilac.coverage.HlaComplex;
+import com.hartwig.hmftools.lilac.coverage.HlaComplexFile;
+import com.hartwig.hmftools.lilac.coverage.HlaYCoverage;
+import com.hartwig.hmftools.lilac.evidence.Candidates;
+import com.hartwig.hmftools.lilac.evidence.PhasedEvidence;
+import com.hartwig.hmftools.lilac.fragment.AminoAcidFragmentPipeline;
+import com.hartwig.hmftools.lilac.fragment.Fragment;
+import com.hartwig.hmftools.lilac.fragment.NucleotideFragmentFactory;
+import com.hartwig.hmftools.lilac.hla.HlaAllele;
+import com.hartwig.hmftools.lilac.qc.AminoAcidQC;
+import com.hartwig.hmftools.lilac.qc.BamQC;
+import com.hartwig.hmftools.lilac.qc.CoverageQC;
+import com.hartwig.hmftools.lilac.qc.HaplotypeQC;
+import com.hartwig.hmftools.lilac.qc.LilacQC;
+import com.hartwig.hmftools.lilac.qc.SolutionSummary;
+import com.hartwig.hmftools.lilac.qc.SomaticVariantQC;
+import com.hartwig.hmftools.lilac.read.BamReader;
+import com.hartwig.hmftools.lilac.read.BamRecordReader;
+import com.hartwig.hmftools.lilac.read.Indel;
+import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
+import com.hartwig.hmftools.lilac.seq.SequenceCount;
+import com.hartwig.hmftools.lilac.variant.CopyNumberAssignment;
+import com.hartwig.hmftools.lilac.variant.SomaticCodingCount;
+import com.hartwig.hmftools.lilac.variant.SomaticVariant;
+import com.hartwig.hmftools.lilac.variant.SomaticVariantAnnotation;
 
 public class LilacApplication
 {
@@ -91,9 +93,9 @@ public class LilacApplication
     private SequenceCount mRefAminoAcidCounts;
     private SequenceCount mRefNucleotideCounts;
 
-    private List<ComplexCoverage> mRankedComplexes;
-    private List<Fragment> mRefNucleotideFrags;
-    private List<FragmentAlleles> mRefFragAlleles;
+    private final List<ComplexCoverage> mRankedComplexes;
+    private final List<Fragment> mRefNucleotideFrags;
+    private final List<FragmentAlleles> mRefFragAlleles;
     private final List<SomaticVariant> mSomaticVariants;
     private final List<SomaticCodingCount> mSomaticCodingCounts;
 
@@ -143,11 +145,25 @@ public class LilacApplication
         mTumorBamReader = tumorBamReader;
     }
 
-    public ReferenceData getReferenceData() { return mRefData; }
+    public ReferenceData getReferenceData()
+    {
+        return mRefData;
+    }
 
-    public LilacQC getSummaryMetrics() { return mSummaryMetrics; }
-    public SolutionSummary getSolutionSummary() { return mSolutionSummary; }
-    public List<ComplexCoverage> getRankedComplexes() { return mRankedComplexes; }
+    public LilacQC getSummaryMetrics()
+    {
+        return mSummaryMetrics;
+    }
+
+    public SolutionSummary getSolutionSummary()
+    {
+        return mSolutionSummary;
+    }
+
+    public List<ComplexCoverage> getRankedComplexes()
+    {
+        return mRankedComplexes;
+    }
 
     public void run()
     {
@@ -165,9 +181,10 @@ public class LilacApplication
 
         String referenceBam = mConfig.tumorOnly() ? mConfig.TumorBam : mConfig.ReferenceBam;
 
-        LL_LOGGER.info("finding read support in {} bam {}", mConfig.tumorOnly() ? "tumor" : "reference", referenceBam);
+        LL_LOGGER.info("finding read support in {} bam {}", mConfig.tumorOnly() ? "tumor" : "reference",
+                referenceBam);
 
-        mNucleotideFragFactory = new NucleotideFragmentFactory(mConfig.MinBaseQual, mRefData);
+        mNucleotideFragFactory = new NucleotideFragmentFactory(mRefData);
 
         if(mRefBamReader == null)
             mRefBamReader = new BamRecordReader(referenceBam, mConfig, GENE_CACHE.GeneTranscriptMap, mNucleotideFragFactory);
@@ -175,29 +192,35 @@ public class LilacApplication
         if(mTumorBamReader == null)
         {
             if(mConfig.tumorOnly())
+            {
                 mTumorBamReader = mRefBamReader;
+            }
             else if(!mConfig.TumorBam.isEmpty())
+            {
                 mTumorBamReader = new BamRecordReader(mConfig.TumorBam, mConfig, GENE_CACHE.GeneTranscriptMap, mNucleotideFragFactory);
+            }
         }
 
         List<Fragment> refFragments = mRefBamReader.findGeneFragments();
 
-        List<Fragment> enrichedRefFragments = NUC_GENE_FRAG_ENRICHMENT.checkAddAdditionalGenes(refFragments);
+        NUC_GENE_FRAG_ENRICHMENT.checkAddAdditionalGenes(refFragments);
 
-        mRefNucleotideFrags.addAll(enrichedRefFragments);
+        mRefNucleotideFrags.addAll(refFragments);
 
-        int medianBaseQuality = mNucleotideFragFactory.calculatePercentileBaseQuality(mRefNucleotideFrags, BASE_QUAL_PERCENTILE);
+        byte medianBaseQuality = mNucleotideFragFactory.calculatePercentileBaseQuality(mRefNucleotideFrags,
+                BASE_QUAL_PERCENTILE);
 
-        if(medianBaseQuality < mConfig.MinBaseQual)
+        if(medianBaseQuality < LOW_BASE_QUAL_THRESHOLD)
         {
-            LL_LOGGER.info("lowering min base quality({}) to median({})", mConfig.MinBaseQual, medianBaseQuality);
-            mConfig.MinBaseQual = medianBaseQuality;
+            LL_LOGGER.info("lowering min base quality({}) to median({})", LOW_BASE_QUAL_THRESHOLD,
+                    medianBaseQuality);
+            LOW_BASE_QUAL_THRESHOLD = medianBaseQuality;
         }
 
-        final Map<String,int[]> geneBaseDepth = calculateGeneCoverage(mRefNucleotideFrags);
+        final Map<String, int[]> geneBaseDepth = calculateGeneCoverage(mRefNucleotideFrags);
         if(!hasSufficientGeneDepth(geneBaseDepth))
         {
-            mResultsWriter.writeFailedSampleFileOutputs(geneBaseDepth, medianBaseQuality);
+            mResultsWriter.writeFailedSampleFileOutputs(geneBaseDepth);
             return;
         }
 
@@ -208,22 +231,28 @@ public class LilacApplication
         List<Fragment> refAminoAcidFrags = mAminoAcidPipeline.highQualRefFragments();
         int totalFragmentCount = refAminoAcidFrags.size();
 
-        double minEvidence = mAminoAcidPipeline.minEvidence();
+        LL_LOGGER.info(format(
+                "totalFrags(%d) minVafFilterDepth(%d) minEvidenceFactor(%.4f) minHighQualEvidenceFactor(%.4f)",
+                totalFragmentCount, mConfig.MinVafFilterDepth, mConfig.MinEvidenceFactor,
+                mConfig.MinHighQualEvidenceFactor));
 
-        LL_LOGGER.info(format("totalFrags(%d) minEvidence(%.1f) minHighQualEvidence(%.1f)",
-                totalFragmentCount, minEvidence, mAminoAcidPipeline.minHighQualEvidence()));
-
-        Candidates candidateFactory = new Candidates(minEvidence, mRefData.NucleotideSequences, mRefData.AminoAcidSequences);
+        Candidates candidateFactory = new Candidates(mConfig, mRefData.NucleotideSequences,
+                mRefData.AminoAcidSequences);
 
         List<GeneTask> geneTasks = Lists.newArrayList();
-        geneTasks.add(new GeneTask(mConfig, mRefData, mAminoAcidPipeline, candidateFactory, HLA_CONTEXT_FACTORY.hlaA()));
-        geneTasks.add(new GeneTask(mConfig, mRefData, mAminoAcidPipeline, candidateFactory, HLA_CONTEXT_FACTORY.hlaB()));
-        geneTasks.add(new GeneTask(mConfig, mRefData, mAminoAcidPipeline, candidateFactory, HLA_CONTEXT_FACTORY.hlaC()));
+        geneTasks.add(
+                new GeneTask(mConfig, mRefData, mAminoAcidPipeline, candidateFactory, HLA_CONTEXT_FACTORY.hlaA()));
+        geneTasks.add(
+                new GeneTask(mConfig, mRefData, mAminoAcidPipeline, candidateFactory, HLA_CONTEXT_FACTORY.hlaB()));
+        geneTasks.add(
+                new GeneTask(mConfig, mRefData, mAminoAcidPipeline, candidateFactory, HLA_CONTEXT_FACTORY.hlaC()));
 
-        List<Callable> callableList = geneTasks.stream().collect(Collectors.toList());
+        List<Callable<Void>> callableList = Lists.newArrayList(geneTasks);
 
         if(!TaskExecutor.executeTasks(callableList, mConfig.Threads))
+        {
             System.exit(1);
+        }
 
         List<HlaAllele> candidateAlleles = Lists.newArrayList();
 
@@ -235,20 +264,23 @@ public class LilacApplication
         List<HlaAllele> recoveredAlleles = Lists.newArrayList();
 
         // make special note of the known stop-loss INDEL on HLA-C
-        Map<HlaAllele,List<Fragment>> knownStopLossFragments = Maps.newHashMap();
+        Map<HlaAllele, List<Fragment>> knownStopLossFragments = Maps.newHashMap();
 
-        for(Map.Entry<Indel,List<Fragment>> entry : mRefBamReader.getKnownStopLossFragments().entrySet())
+        for(Map.Entry<Indel, List<Fragment>> entry : mRefBamReader.getKnownStopLossFragments().entrySet())
         {
             HlaAllele allele = mRefData.KnownStopLossIndelAlleles.get(entry.getKey());
 
             if(allele != null)
             {
-                LL_LOGGER.info("recovering stop loss allele({}) with {} fragments", allele, entry.getValue().size());
+                LL_LOGGER.info("recovering stop loss allele({}) with {} fragments", allele,
+                        entry.getValue().size());
 
                 knownStopLossFragments.put(allele, entry.getValue());
 
                 if(!candidateAlleles.contains(allele))
+                {
                     recoveredAlleles.add(allele);
+                }
             }
         }
 
@@ -270,7 +302,9 @@ public class LilacApplication
 
         candidateAlleles.addAll(recoveredAlleles);
 
-        List<HlaAllele> missingExpected = mConfig.ActualAlleles.stream().filter(x -> !candidateAlleles.contains(x)).collect(Collectors.toList());
+        List<HlaAllele> missingExpected = mConfig.ActualAlleles.stream()
+                .filter(x -> !candidateAlleles.contains(x))
+                .collect(Collectors.toList());
 
         if(!missingExpected.isEmpty())
         {
@@ -284,10 +318,13 @@ public class LilacApplication
                 .filter(x -> candidateAlleles.contains(x.Allele)).collect(Collectors.toList());
 
         // calculate allele coverage
-        mRefAminoAcidCounts = SequenceCount.aminoAcids(minEvidence, refAminoAcidFrags);
-        mRefNucleotideCounts = SequenceCount.nucleotides(minEvidence, refAminoAcidFrags);
+        mRefAminoAcidCounts = SequenceCount.aminoAcids(mConfig.MinVafFilterDepth, mConfig.MinEvidenceFactor,
+                refAminoAcidFrags);
+        mRefNucleotideCounts = SequenceCount.nucleotides(mConfig.MinVafFilterDepth, mConfig.MinEvidenceFactor,
+                refAminoAcidFrags);
 
-        Map<String,List<Integer>> refNucleotideHetLociMap = calcNucleotideHeterogygousLoci(mRefNucleotideCounts.heterozygousLoci());
+        Map<String, List<Integer>> refNucleotideHetLociMap = calcNucleotideHeterogygousLoci(
+                mRefNucleotideCounts.heterozygousLoci());
 
         List<HlaSequenceLoci> candidateNucSequences = mRefData.NucleotideSequences.stream()
                 .filter(x -> candidateAlleles.contains(x.Allele.asFourDigit())).collect(Collectors.toList());
@@ -295,15 +332,16 @@ public class LilacApplication
         List<HlaSequenceLoci> recoveredSequences = mRefData.AminoAcidSequences.stream()
                 .filter(x -> recoveredAlleles.contains(x.Allele)).collect(Collectors.toList());
 
-        Map<String,Map<Integer,Set<String>>> geneAminoAcidHetLociMap =
-                extractHeterozygousLociSequences(mAminoAcidPipeline.getReferenceAminoAcidCounts(), minEvidence, recoveredSequences);
+        Map<String, Map<Integer, Set<String>>> geneAminoAcidHetLociMap = extractHeterozygousLociSequences(
+                mAminoAcidPipeline.getReferenceAminoAcidCounts(), recoveredSequences);
 
         mFragAlleleMapper = new FragmentAlleleMapper(
                 geneAminoAcidHetLociMap, refNucleotideHetLociMap, mAminoAcidPipeline.getReferenceNucleotides());
 
         mFragAlleleMapper.setKnownStopLossAlleleFragments(knownStopLossFragments);
 
-        mRefFragAlleles.addAll(mFragAlleleMapper.createFragmentAlleles(refAminoAcidFrags, candidateSequences, candidateNucSequences));
+        mRefFragAlleles.addAll(mFragAlleleMapper.createFragmentAlleles(refAminoAcidFrags, candidateSequences,
+                candidateNucSequences));
 
         if(mRefFragAlleles.isEmpty())
         {
@@ -325,8 +363,8 @@ public class LilacApplication
         recoveredSequences = recoveredSequences.stream()
                 .filter(x -> confirmedRecoveredAlleles.contains(x.Allele)).collect(Collectors.toList());
 
-        geneAminoAcidHetLociMap =
-                extractHeterozygousLociSequences(mAminoAcidPipeline.getReferenceAminoAcidCounts(), minEvidence, recoveredSequences);
+        geneAminoAcidHetLociMap = extractHeterozygousLociSequences(mAminoAcidPipeline.getReferenceAminoAcidCounts(),
+                recoveredSequences);
 
         mFragAlleleMapper.setHetAminoAcidLoci(geneAminoAcidHetLociMap);
         mHlaYCoverage.updateAminoAcidLoci(geneAminoAcidHetLociMap);
@@ -341,10 +379,12 @@ public class LilacApplication
 
         mRefFragAlleles.clear();
 
-        LL_LOGGER.debug("creating fragment alleles from amnioAcidfrags({}) candidateSequences({}) nucleotideSequences({})",
+        LL_LOGGER.debug(
+                "creating fragment alleles from amnioAcidfrags({}) candidateSequences({}) nucleotideSequences({})",
                 refAminoAcidFrags.size(), candidateSequences.size(), candidateNucSequences.size());
 
-        mRefFragAlleles.addAll(mFragAlleleMapper.createFragmentAlleles(refAminoAcidFrags, candidateSequences, candidateNucSequences));
+        mRefFragAlleles.addAll(mFragAlleleMapper.createFragmentAlleles(refAminoAcidFrags, candidateSequences,
+                candidateNucSequences));
 
         // down-sample if ref depth is higher than configured cap
         List<FragmentAlleles> calcRefFragAlleles = checkDownsampleRefFragmentAlleles();
@@ -355,13 +395,17 @@ public class LilacApplication
         ComplexCoverageCalculator complexCalculator = new ComplexCoverageCalculator(mConfig);
 
         LL_LOGGER.info("calculating coverage for complexes({}) and ref alleles({})",
-                complexes.size(), mRefFragAlleles.size() > calcRefFragAlleles.size() ?
-                        format("%d capped=%d", mRefFragAlleles.size(), calcRefFragAlleles.size()) : mRefFragAlleles.size());
+                complexes.size(),
+                mRefFragAlleles.size() > calcRefFragAlleles.size()
+                        ? format("%d capped=%d", mRefFragAlleles.size(), calcRefFragAlleles.size())
+                        : mRefFragAlleles.size());
 
-        List<ComplexCoverage> calculatedComplexes = complexCalculator.calculateComplexCoverages(calcRefFragAlleles, complexes);
+        List<ComplexCoverage> calculatedComplexes = complexCalculator.calculateComplexCoverages(calcRefFragAlleles,
+                complexes);
 
         ComplexCoverageRanking complexRanker = new ComplexCoverageRanking(mConfig.TopScoreThreshold, mRefData);
-        mRankedComplexes.addAll(complexRanker.rankCandidates(calculatedComplexes, recoveredAlleles, candidateSequences));
+        mRankedComplexes
+                .addAll(complexRanker.rankCandidates(calculatedComplexes, recoveredAlleles, candidateSequences));
 
         if(mRankedComplexes.isEmpty())
         {
@@ -372,11 +416,12 @@ public class LilacApplication
         if(calcRefFragAlleles.size() < mRefFragAlleles.size())
         {
             // For top solutions, recalculate from all evidence but keep the scoring values unchanged
-            for(int i = 0; i <  mRankedComplexes.size(); i++)
+            for(int i = 0; i < mRankedComplexes.size(); i++)
             {
-                ComplexCoverage origComplexCoverage =  mRankedComplexes.get(i);
+                ComplexCoverage origComplexCoverage = mRankedComplexes.get(i);
 
-                ComplexCoverage recalcComplexCoverage = ComplexBuilder.calcProteinCoverage(mRefFragAlleles, origComplexCoverage.getAlleles());
+                ComplexCoverage recalcComplexCoverage = ComplexBuilder.calcProteinCoverage(mRefFragAlleles,
+                        origComplexCoverage.getAlleles());
                 recalcComplexCoverage.setScore(origComplexCoverage.getScore());
                 recalcComplexCoverage.setCohortFrequencyTotal(origComplexCoverage.cohortFrequencyTotal());
 
@@ -394,9 +439,11 @@ public class LilacApplication
             for(ComplexCoverage rankedCoverage : mRankedComplexes)
             {
                 if(rankedCoverage.getAlleles().size() != mConfig.ActualAlleles.size())
+                {
                     continue;
+                }
 
-                if(rankedCoverage.getAlleles().stream().allMatch(x -> mConfig.ActualAlleles.contains(x)))
+                if(mConfig.ActualAlleles.containsAll(rankedCoverage.getAlleles()))
                 {
                     actualAllelesCoverage = rankedCoverage;
                     break;
@@ -422,7 +469,8 @@ public class LilacApplication
                 .filter(x -> winningAlleles.contains(x.Allele)).collect(Collectors.toList());
 
         List<HlaSequenceLoci> winningNucSequences = candidateNucSequences.stream()
-                .filter(x -> winningAlleles.contains(x.Allele.asFourDigit())).collect(Collectors.toList());
+                .filter(x -> winningAlleles.contains(x.Allele.asFourDigit()))
+                .collect(Collectors.toList());
 
         LL_LOGGER.info("{}", HlaComplexFile.header());
 
@@ -433,32 +481,39 @@ public class LilacApplication
 
         // log key results for fast post-run analysis
         StringJoiner totalCoverages = new StringJoiner(",");
-        winningRefCoverage.getAlleleCoverage().forEach(x -> totalCoverages.add(format("%.0f",x.TotalCoverage)));
+        winningRefCoverage.getAlleleCoverage().forEach(x -> totalCoverages.add(format("%.0f", x.TotalCoverage)));
 
-        double scoreMargin = 0;
+        double scoreMargin = 0.0;
         StringJoiner nextSolutionInfo = new StringJoiner(ITEM_DELIM);
 
         if(mRankedComplexes.size() > 1)
         {
             ComplexCoverage nextSolution = mRankedComplexes.get(1);
             scoreMargin = mRankedComplexes.get(0).getScore() - nextSolution.getScore();
-            nextSolution.getAlleles().stream().filter(x -> !winningAlleles.contains(x)).forEach(x -> nextSolutionInfo.add(x.toString()));
+            nextSolution.getAlleles().stream().filter(x -> !winningAlleles.contains(x))
+                    .forEach(x -> nextSolutionInfo.add(x.toString()));
         }
 
         LL_LOGGER.info("WINNERS_REF: {}, {}, {}, {}, {}, {}",
-                mConfig.Sample, mRankedComplexes.size(),
-                HlaAllele.toString(winningRefCoverage.getAlleles()), format("%.3f", scoreMargin), nextSolutionInfo, totalCoverages);
+                mConfig.Sample, mRankedComplexes.size(), HlaAllele.toString(winningRefCoverage.getAlleles()), format("%.3f", scoreMargin),
+                nextSolutionInfo, totalCoverages);
 
         // write fragment assignment data
         for(FragmentAlleles fragAllele : mRefFragAlleles)
         {
             if(fragAllele.getFragment().isScopeSet())
+            {
                 continue;
+            }
 
-            if(winningAlleles.stream().anyMatch(x -> fragAllele.contains(x)))
+            if(winningAlleles.stream().anyMatch(fragAllele::contains))
+            {
                 fragAllele.getFragment().setScope(SOLUTION);
+            }
             else
+            {
                 fragAllele.getFragment().setScope(CANDIDATE);
+            }
         }
 
         mSomaticCodingCounts.addAll(SomaticCodingCount.create(winningAlleles));
@@ -470,17 +525,19 @@ public class LilacApplication
         if(!allValid)
         {
             LL_LOGGER.error("failed validation");
-            mResultsWriter.writeFailedSampleFileOutputs(geneBaseDepth, medianBaseQuality);
+            mResultsWriter.writeFailedSampleFileOutputs(geneBaseDepth);
             return;
         }
 
         // create various QC and other metrics
         SomaticVariantQC somaticVariantQC = SomaticVariantQC.create(mSomaticVariants.size(), mSomaticCodingCounts);
 
-        List<Fragment> unmatchedFrags = refAminoAcidFrags.stream().filter(x -> x.scope().isUnmatched()).collect(Collectors.toList());
+        List<Fragment> unmatchedFrags = refAminoAcidFrags.stream().filter(x -> x.scope().isUnmatched())
+                .collect(Collectors.toList());
 
         HaplotypeQC haplotypeQC = HaplotypeQC.create(
-                winningSequences, mRefData.HlaYAminoAcidSequences, combinedPhasedEvidence, mRefAminoAcidCounts, unmatchedFrags);
+                winningSequences, mRefData.HlaYAminoAcidSequences, combinedPhasedEvidence, mRefAminoAcidCounts,
+                unmatchedFrags);
 
         AminoAcidQC aminoAcidQC = AminoAcidQC.create(
                 winningSequences, mRefData.HlaYAminoAcidSequences, mRefAminoAcidCounts,
@@ -493,10 +550,11 @@ public class LilacApplication
                 scoreMargin, nextSolutionInfo.toString(), medianBaseQuality, mHlaYCoverage.getSelectedAllele(),
                 aminoAcidQC, bamQC, coverageQC, haplotypeQC, somaticVariantQC);
 
-        ComplexCoverage refCoverage = !mConfig.tumorOnly() ?
-                winningRefCoverage : ComplexCoverage.create(Lists.newArrayList());
+        ComplexCoverage refCoverage = !mConfig.tumorOnly() ? winningRefCoverage
+                : ComplexCoverage.create(Lists.newArrayList());
 
-        mSolutionSummary = SolutionSummary.create(refCoverage, mTumorCoverage, mTumorCopyNumber, mSomaticCodingCounts, mRnaCoverage);
+        mSolutionSummary = SolutionSummary.create(refCoverage, mTumorCoverage, mTumorCopyNumber,
+                mSomaticCodingCounts, mRnaCoverage);
 
         writeFileOutputs();
 
@@ -508,7 +566,9 @@ public class LilacApplication
     private List<FragmentAlleles> checkDownsampleRefFragmentAlleles()
     {
         if(mConfig.MaxRefFragments == 0 || mRefFragAlleles.size() <= mConfig.MaxRefFragments)
+        {
             return mRefFragAlleles;
+        }
 
         if(mRefFragAlleles.size() <= mConfig.MaxRefFragments * 2)
         {
@@ -518,7 +578,7 @@ public class LilacApplication
         }
 
         List<FragmentAlleles> calcRefFragAlleles = Lists.newArrayList();
-        int nthElement = (int)floor(mRefFragAlleles.size() / (double)mConfig.MaxRefFragments);
+        int nthElement = (int) floor(mRefFragAlleles.size() / (double) mConfig.MaxRefFragments);
 
         int counter = 0;
         for(FragmentAlleles fragmentAllele : mRefFragAlleles)
@@ -530,7 +590,9 @@ public class LilacApplication
                 calcRefFragAlleles.add(fragmentAllele);
 
                 if(calcRefFragAlleles.size() >= mConfig.MaxRefFragments)
+                {
                     break;
+                }
 
                 counter = 0;
             }
@@ -539,7 +601,7 @@ public class LilacApplication
         return calcRefFragAlleles;
     }
 
-    public void extractTumorResults(
+    private void extractTumorResults(
             final List<HlaAllele> winningAlleles, final ComplexCoverage winningRefCoverage,
             final List<HlaSequenceLoci> winningSequences, final List<HlaSequenceLoci> winningNucSequences)
     {
@@ -555,8 +617,8 @@ public class LilacApplication
         }
         else
         {
-            List<Fragment> rawFragments = mTumorBamReader.findGeneFragments();
-            List<Fragment> tumorNucleotideFrags = NUC_GENE_FRAG_ENRICHMENT.checkAddAdditionalGenes(rawFragments);
+            List<Fragment> tumorNucleotideFrags = mTumorBamReader.findGeneFragments();
+            NUC_GENE_FRAG_ENRICHMENT.checkAddAdditionalGenes(tumorNucleotideFrags);
 
             List<Fragment> tumorFragments = mAminoAcidPipeline.calcComparisonCoverageFragments(tumorNucleotideFrags);
 
@@ -568,7 +630,9 @@ public class LilacApplication
                     mFragAlleleMapper.createFragmentAlleles(tumorFragments, winningSequences, winningNucSequences);
 
             if(mHlaYCoverage.exceedsThreshold())
+            {
                 mHlaYCoverage.assignFragments(winningAlleles, tumorFragAlleles, tumorFragments, TUMOR);
+            }
 
             mTumorCoverage = ComplexBuilder.calcProteinCoverage(tumorFragAlleles, winningAlleles);
 
@@ -587,7 +651,9 @@ public class LilacApplication
         SomaticVariantAnnotation variantAnnotation = new SomaticVariantAnnotation(mConfig, GENE_CACHE.GeneTranscriptMap);
 
         if(variantAnnotation.getSomaticVariants().isEmpty())
+        {
             return;
+        }
 
         mSomaticVariants.addAll(variantAnnotation.getSomaticVariants());
 
@@ -608,46 +674,16 @@ public class LilacApplication
         }
     }
 
-    public void extractRnaCoverage(
-            final List<HlaAllele> winningAlleles, final List<HlaSequenceLoci> winningSequences, final List<HlaSequenceLoci> winningNucSequences)
+    private void extractRnaCoverage(
+            final List<HlaAllele> winningAlleles, final List<HlaSequenceLoci> winningSequences,
+            final List<HlaSequenceLoci> winningNucSequences)
     {
         mRnaCoverage = LilacAppendRna.extractRnaCoverage(
                 mConfig.RnaBam, mConfig, mRefData, mNucleotideFragFactory, NUC_GENE_FRAG_ENRICHMENT, mAminoAcidPipeline, mFragAlleleMapper,
                 winningAlleles, winningSequences, winningNucSequences);
-
-        /*
-        final NucleotideFragmentFactory nucleotideFragFactory, final NucleotideGeneEnrichment nucleotideGeneEnrichment,
-        final AminoAcidFragmentPipeline aminoAcidPipeline, final FragmentAlleleMapper fragAlleleMapper,
-        final List<HlaAllele> winningAlleles, final List<HlaSequenceLoci> winningSequences, final List<HlaSequenceLoci> winningNucSequences)
-
-        if(mConfig.RnaBam.isEmpty())
-        {
-            mRnaCoverage = ComplexCoverage.create(Lists.newArrayList());
-            return;
-        }
-
-        BamRecordReader rnaBamReader = new BamRecordReader(mConfig.RnaBam, mConfig.RefGenome, mRefData.HlaTranscriptData, mNucleotideFragFactory);
-
-        List<Fragment> rnaNucleotideFrags = mNucleotideGeneEnrichment.enrich(rnaBamReader.findGeneFragments());
-
-        List<Fragment> rnaFragments = mAminoAcidPipeline.calcComparisonCoverageFragments(rnaNucleotideFrags);
-
-        mResultsWriter.writeFragments(RNA, rnaFragments);
-
-        LL_LOGGER.info("calculating RNA coverage from frags({} highQual={})", rnaNucleotideFrags.size(), rnaFragments.size());
-
-        List<FragmentAlleles> rnaFragAlleles = mFragAlleleMapper.createFragmentAlleles(rnaFragments, winningSequences, winningNucSequences);
-
-        if(mHlaYCoverage.exceedsThreshold())
-            mHlaYCoverage.assignFragments(winningAlleles, rnaFragAlleles, rnaFragments, RNA);
-
-        mRnaCoverage = ComplexBuilder.calcProteinCoverage(rnaFragAlleles, winningAlleles);
-
-        mRnaCoverage.populateMissingCoverage(winningAlleles);
-        */
     }
 
-    public void writeFileOutputs()
+    private void writeFileOutputs()
     {
         mSummaryMetrics.log(mConfig.Sample);
 
@@ -660,15 +696,18 @@ public class LilacApplication
         mResultsWriter.writeReferenceFragments(mRankedComplexes, mRefNucleotideFrags, mRefFragAlleles);
     }
 
-    private boolean validateFragments(final List<Fragment> fragments)
+    private boolean validateFragments(final Collection<Fragment> fragments)
     {
         if(!mConfig.RunValidation)
+        {
             return true;
+        }
 
-        List<Fragment> invalidFragments = fragments.stream().filter(x -> !x.validate()).collect(Collectors.toList());
+        List<Fragment> invalidFragments = fragments.stream().filter(x -> !x.validate()).toList();
         if(invalidFragments.isEmpty())
+        {
             return true;
-
+        }
 
         LL_LOGGER.warn("has {} invalid fragments", invalidFragments.size());
         return false;
@@ -678,11 +717,15 @@ public class LilacApplication
     {
         // check uniqueness amongst valid candidate alleles
         if(!mConfig.RunValidation)
+        {
             return true;
+        }
 
         Set<HlaAllele> duplicateAlleles = HlaAllele.findDuplicates(alleles);
         if(duplicateAlleles.isEmpty())
-            return  true;
+        {
+            return true;
+        }
 
         LL_LOGGER.warn("has {} duplicate alleles from complex building", duplicateAlleles.size());
         return false;
@@ -691,32 +734,40 @@ public class LilacApplication
     private boolean validateComplexes(final List<HlaComplex> complexes)
     {
         if(!mConfig.RunValidation)
+        {
             return true;
+        }
 
         Set<HlaComplex> duplicates = findDuplicates(complexes);
         if(duplicates.isEmpty())
+        {
             return true;
+        }
 
         LL_LOGGER.warn("has {} duplicate complexes", duplicates.size());
         return false;
     }
 
-    private boolean hasSufficientGeneDepth(final Map<String,int[]> geneBaseDepth)
+    private boolean hasSufficientGeneDepth(final Map<String, int[]> geneBaseDepth)
     {
-        int aLowCoverage = (int) Arrays.stream(geneBaseDepth.get(HLA_A)).filter(x -> x < WARN_LOW_COVERAGE_DEPTH).count();
-        int bLowCoverage = (int)Arrays.stream(geneBaseDepth.get(HLA_B)).filter(x -> x < WARN_LOW_COVERAGE_DEPTH).count();
-        int cLowCoverage = (int)Arrays.stream(geneBaseDepth.get(HLA_C)).filter(x -> x < WARN_LOW_COVERAGE_DEPTH).count();
+        int aLowCoveragePositions = (int) Arrays.stream(geneBaseDepth.get(HLA_A)).filter(x -> x < WARN_LOW_COVERAGE_DEPTH).count();
+        int bLowCoveragePositions = (int) Arrays.stream(geneBaseDepth.get(HLA_B)).filter(x -> x < WARN_LOW_COVERAGE_DEPTH).count();
+        int cLowCoveragePositions = (int) Arrays.stream(geneBaseDepth.get(HLA_C)).filter(x -> x < WARN_LOW_COVERAGE_DEPTH).count();
 
-        if(!mConfig.ReferenceBam.isEmpty() && aLowCoverage + bLowCoverage + cLowCoverage >= mConfig.FatalLowCoverage)
+        int totalLowCoveragePositions = aLowCoveragePositions + bLowCoveragePositions + cLowCoveragePositions;
+
+        if(!mConfig.ReferenceBam.isEmpty() && totalLowCoveragePositions >= mConfig.FatalTotalLowCoveragePositions)
         {
-            LL_LOGGER.warn("gene depth coverage(A={} B={} C={}) too low, exiting", aLowCoverage, bLowCoverage, cLowCoverage);
+            LL_LOGGER.warn("Exiting due to too low coverage. Number of bases with <{} coverage per gene: A={}, B={}, C={}. Total={} exceeds threshold={}",
+                    WARN_LOW_COVERAGE_DEPTH, aLowCoveragePositions, bLowCoveragePositions, cLowCoveragePositions,
+                    totalLowCoveragePositions, mConfig.FatalTotalLowCoveragePositions);
             return false;
         }
 
         return true;
     }
 
-    public static void main(@NotNull final String[] args)
+    public static void main(final String[] args)
     {
         ConfigBuilder configBuilder = new ConfigBuilder(APP_NAME);
 
@@ -724,7 +775,21 @@ public class LilacApplication
 
         configBuilder.checkAndParseCommandLine(args);
 
-        LilacApplication lilac = new LilacApplication(new LilacConfig(configBuilder), configBuilder);
-        lilac.run();
+        LilacConfig lilacConfig = new LilacConfig(configBuilder);
+        LilacApplication lilac = new LilacApplication(lilacConfig, configBuilder);
+
+        File stackSampleFile = lilacConfig.OutputDir.isEmpty()
+                ? null
+                : new File(new File(lilacConfig.OutputDir), format("%s.lilac.stacks", lilacConfig.Sample));
+        try(StackSampler stackSampler = stackSampleFile == null || lilacConfig.StackSampleRate <= 0
+                ? null
+                : new StackSampler(lilacConfig.StackSampleRate, stackSampleFile))
+        {
+            lilac.run();
+        }
+        catch(Exception e)
+        {
+            throw new RuntimeException(e);
+        }
     }
 }
