@@ -3,39 +3,43 @@ package com.hartwig.hmftools.lilac.evidence;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
 import static com.hartwig.hmftools.lilac.seq.HlaSequence.WILD_STR;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.hartwig.hmftools.lilac.LilacConfig;
-import com.hartwig.hmftools.lilac.ReferenceData;
-import com.hartwig.hmftools.lilac.seq.SequenceCount;
 import com.hartwig.hmftools.lilac.fragment.Fragment;
 import com.hartwig.hmftools.lilac.hla.HlaAllele;
 import com.hartwig.hmftools.lilac.hla.HlaContext;
 import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
+import com.hartwig.hmftools.lilac.seq.SequenceCount;
 
 public final class Candidates
 {
-    private final double mMinEvidence;
+    private final LilacConfig mConfig;
     private final List<HlaSequenceLoci> mNucleotideSequences;
     private final List<HlaSequenceLoci> mAminoAcidSequences;
 
-    public Candidates(
-            double minEvidence, final List<HlaSequenceLoci> nucleotideSequences, final List<HlaSequenceLoci> aminoAcidSequences)
+    public Candidates(final LilacConfig config, final List<HlaSequenceLoci> nucleotideSequences,
+            final List<HlaSequenceLoci> aminoAcidSequences)
     {
-        mMinEvidence = minEvidence;
+        mConfig = config;
         mNucleotideSequences = nucleotideSequences;
         mAminoAcidSequences = aminoAcidSequences;
     }
 
-    public List<HlaAllele> unphasedCandidates(final HlaContext context, final List<Fragment> fragments, final List<HlaAllele> commonAllles)
+    public List<HlaAllele> unphasedCandidates(final HlaContext context, final Collection<Fragment> fragments,
+            final Collection<HlaAllele> commonAllles)
     {
-        List<Integer> aminoAcidBoundary = context.AminoAcidBoundaries;
+        Set<Integer> aminoAcidBoundary = context.AminoAcidBoundaries;
 
-        LL_LOGGER.debug("gene({}) determining un-phased candidates from frags({})", context.geneName(), fragments.size());
+        List<Fragment> contextFragments = fragments.stream().filter(x -> x.readGene().equals(context.geneName())).toList();
+        LL_LOGGER.debug("gene({}) determining un-phased candidates from frags({})", context.geneName(), contextFragments.size());
 
-        SequenceCount aminoAcidCounts = SequenceCount.aminoAcids(mMinEvidence, fragments);
+        SequenceCount aminoAcidCounts = SequenceCount.aminoAcids(mConfig.MinVafFilterDepth, mConfig.MinEvidenceFactor, contextFragments);
 
         List<HlaSequenceLoci> geneCandidates = mAminoAcidSequences.stream()
                 .filter(x -> x.Allele.Gene.equals(context.Gene)).collect(Collectors.toList());
@@ -43,12 +47,13 @@ public final class Candidates
         LL_LOGGER.debug("gene({}) {} candidates before filtering", context.geneName(), geneCandidates.size());
 
         // Amino acid filtering
-        List<HlaSequenceLoci> aminoAcidCandidates = filterSequencesByMinSupport(geneCandidates, aminoAcidCounts, context.AminoAcidBoundaries);
+        List<HlaSequenceLoci> aminoAcidCandidates = filterSequencesByMinSupport(
+	        geneCandidates, aminoAcidCounts, context.AminoAcidBoundaries);
 
         List<HlaAllele> aminoAcidCandidateAlleles = aminoAcidCandidates.stream().map(x -> x.Allele).collect(Collectors.toList());
 
         List<HlaAllele> aminoAcidSpecificAllelesCandidates = aminoAcidCandidateAlleles.stream()
-                .map(x -> x.asFourDigit()).collect(Collectors.toList());
+                .map(HlaAllele::asFourDigit).toList();
 
         if(aminoAcidSpecificAllelesCandidates.isEmpty())
         {
@@ -61,14 +66,15 @@ public final class Candidates
         LL_LOGGER.info("gene({}) {} candidates after amino acid filtering", context.geneName(), aminoAcidCandidates.size());
 
         // Nucleotide filtering
-        NucleotideFiltering nucleotideFiltering = new NucleotideFiltering(mMinEvidence, aminoAcidBoundary);
+        NucleotideFiltering nucleotideFiltering = new NucleotideFiltering(
+                mConfig.MinVafFilterDepth, mConfig.MinEvidenceFactor, aminoAcidBoundary);
 
         List<HlaSequenceLoci> nucleotideCandidatesAfterAminoAcidFiltering = mNucleotideSequences.stream()
                 .filter(x -> aminoAcidSpecificAllelesCandidates.contains(x.Allele.asFourDigit()))
                 .collect(Collectors.toList());
 
         List<HlaSequenceLoci> nucleotideSpecificSequences = nucleotideFiltering.filterCandidatesOnAminoAcidBoundaries(
-                nucleotideCandidatesAfterAminoAcidFiltering, fragments);
+                nucleotideCandidatesAfterAminoAcidFiltering, contextFragments);
 
         List<HlaAllele> nucleotideSpecificAllelesCandidates = HlaAllele.dedup
                 (nucleotideSpecificSequences.stream().map(x -> x.Allele.asFourDigit()).collect(Collectors.toList()));
@@ -86,24 +92,28 @@ public final class Candidates
     }
 
     private List<HlaSequenceLoci> filterSequencesByMinSupport(
-            final List<HlaSequenceLoci> candidates, final SequenceCount aminoAcidCount, final List<Integer> aminoAcidBoundaries)
+            final Collection<HlaSequenceLoci> candidates, final SequenceCount aminoAcidCount, final Set<Integer> aminoAcidBoundaries)
     {
         // eliminate sequences without min support for their amino acid at each loco, ignoring exon boundaries
         List<HlaSequenceLoci> candidateSequences = Lists.newArrayList();
         candidateSequences.addAll(candidates);
 
-        for(int locus = 0; locus < aminoAcidCount.getLength(); ++locus)
+        for(int locus : aminoAcidCount.seqCountsByLoci().keySet())
         {
             if(aminoAcidBoundaries.contains(locus))
+            {
                 continue;
+            }
 
-            List<String> expectedSequences = aminoAcidCount.getMinCountSequences(locus);
+            List<String> expectedSequences = aminoAcidCount.getMinEvidenceSequences(locus, mConfig.MinEvidenceFactor);
 
             if(expectedSequences.isEmpty())
+            {
                 continue;
+            }
 
             int index = 0;
-            // List<HlaAllele> removedAlleles = Lists.newArrayList();
+
             while(index < candidateSequences.size())
             {
                 HlaSequenceLoci sequence = candidateSequences.get(index);
@@ -120,23 +130,14 @@ public final class Candidates
                 }
 
                 candidateSequences.remove(index);
-                // removedAlleles.add(sequence.Allele);
             }
-
-            /*
-            if(!removedAlleles.isEmpty())
-            {
-                LL_LOGGER.debug("locus({}) seq({}) removed {} alleles: {}",
-                        locus, expectedSequences, removedAlleles.size(), HlaAllele.toString(removedAlleles, 50));
-            }
-            */
         }
 
         return candidateSequences;
     }
 
     public List<HlaAllele> phasedCandidates(
-            final HlaContext context, final List<HlaAllele> unphasedCandidateAlleles, final List<PhasedEvidence> phasedEvidence)
+            final HlaContext context, final Collection<HlaAllele> unphasedCandidateAlleles, final Iterable<PhasedEvidence> phasedEvidence)
     {
         LL_LOGGER.debug("gene({}) determining phased candidate set", context.geneName());
 
@@ -152,19 +153,18 @@ public final class Candidates
         return phasedAlleles;
     }
 
-    private List<HlaSequenceLoci> filterCandidates(final List<HlaSequenceLoci> initialCandidates, final List<PhasedEvidence> evidence)
+    private static List<HlaSequenceLoci> filterCandidates(final Collection<HlaSequenceLoci> initialCandidates,
+            final Iterable<PhasedEvidence> evidence)
     {
         List<HlaSequenceLoci> candidates = Lists.newArrayList();
         candidates.addAll(initialCandidates);
 
-        for(int i = 0; i < evidence.size(); ++i)
+        for(PhasedEvidence newEvidence : evidence)
         {
-            PhasedEvidence newEvidence = evidence.get(i);
-
             candidates = candidates.stream()
-                .filter(x -> x.consistentWithAny(
-                        newEvidence.getEvidence().keySet().stream().collect(Collectors.toList()), newEvidence.getAminoAcidLoci()))
-                .collect(Collectors.toList());
+                    .filter(x -> x.consistentWithAny(
+                            new ArrayList<>(newEvidence.getEvidence().keySet()), newEvidence.getAminoAcidLoci()))
+                    .collect(Collectors.toList());
         }
 
         return candidates;
