@@ -1,6 +1,6 @@
 package com.hartwig.hmftools.lilac.seq;
 
-import static java.lang.Math.min;
+import static java.lang.Math.ceil;
 
 import static com.hartwig.hmftools.common.utils.file.FileWriterUtils.createBufferedWriter;
 import static com.hartwig.hmftools.lilac.GeneCache.shortGeneName;
@@ -9,205 +9,196 @@ import static com.hartwig.hmftools.lilac.LilacConstants.GENE_A;
 import static com.hartwig.hmftools.lilac.LilacConstants.GENE_B;
 import static com.hartwig.hmftools.lilac.LilacConstants.GENE_C;
 
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
-import com.google.common.collect.Sets;
-import com.hartwig.hmftools.lilac.fragment.Fragment;
-
 import java.io.BufferedWriter;
 import java.io.IOException;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.NavigableMap;
+import java.util.NavigableSet;
 import java.util.Set;
 import java.util.StringJoiner;
 import java.util.stream.Collectors;
 
-import org.apache.commons.math3.util.Pair;
+import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.HashMultiset;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
+import com.google.common.collect.Multiset;
+import com.google.common.collect.Sets;
+import com.hartwig.hmftools.lilac.fragment.Fragment;
+import com.hartwig.hmftools.lilac.utils.AminoAcid;
+import com.hartwig.hmftools.lilac.utils.Nucleotide;
+
+import org.jetbrains.annotations.Nullable;
 
 public final class SequenceCount
 {
-    private final double mMinCount;
+    private final int mMinFilterDepth;
+    private final double mMinEvidenceFactor;
 
-    private final Map<String,Integer>[] mSeqCountsList; // the index into this array of maps is the locus
+    private final NavigableMap<Integer, Multiset<String>> mSeqCountsByLoci;
 
-    public SequenceCount(double minCount, final Map<String,Integer>[] seqCounts)
+    private SequenceCount(final int minFilterDepth, final double minEvidenceFactor, final NavigableMap<Integer, Multiset<String>> seqCounts)
     {
-        mMinCount = minCount;
-        mSeqCountsList = seqCounts;
+        mMinFilterDepth = minFilterDepth;
+        mMinEvidenceFactor = minEvidenceFactor;
+        mSeqCountsByLoci = seqCounts;
     }
 
-    public int getLength()
+    @VisibleForTesting
+    public SequenceCount(final Map<String, Integer>[] seqCounts)
     {
-        return mSeqCountsList.length;
-    }
-
-    public Map<String,Integer> get(int locus)
-    {
-        if (locus >= mSeqCountsList.length || mSeqCountsList[locus] == null)
+        mSeqCountsByLoci = Maps.newTreeMap();
+        for(int locus = 0; locus < seqCounts.length; locus++)
         {
-            LL_LOGGER.error("invalid sequence count index({}) size({}) look-up", locus, mSeqCountsList.length);
-            return Maps.newHashMap();
+            Multiset<String> seqCount = HashMultiset.create();
+            for(Map.Entry<String, Integer> entry : seqCounts[locus].entrySet())
+            {
+                seqCount.add(entry.getKey(), entry.getValue());
+            }
+
+            mSeqCountsByLoci.put(locus, seqCount);
         }
 
-        return mSeqCountsList[locus];
+        mMinFilterDepth = Integer.MAX_VALUE;
+        mMinEvidenceFactor = 0.0;
     }
 
-    public static SequenceCount nucleotides(double minCount, final List<Fragment> fragments)
+    public static SequenceCount nucleotides(final int minFilterDepth, final double minEvidenceFactor, final Collection<Fragment> fragments)
     {
-        int length = fragments.stream().mapToInt(x -> x.maxNucleotideLocus()).max().orElse(0) + 1;
-
-        Map<String,Integer>[] seqCountsList = new Map[length];
-        for(int i = 0; i < length; ++i)
-        {
-            seqCountsList[i] = Maps.newHashMap();
-        }
-
+        NavigableMap<Integer, Multiset<String>> seqCountsByLoci = Maps.newTreeMap();
         for(Fragment fragment : fragments)
         {
-            for(int index = 0; index < fragment.nucleotideLoci().size(); ++index)
+            for(Nucleotide nucleotide : fragment.nucleotidesByLoci().values())
             {
-                int locus = fragment.nucleotideLoci().get(index);
-                String nucleotide = fragment.nucleotides().get(index);
-                increment(seqCountsList, locus, nucleotide);
+                int locus = nucleotide.locus();
+                String bases = nucleotide.bases();
+                seqCountsByLoci.computeIfAbsent(locus, k -> HashMultiset.create());
+                seqCountsByLoci.get(locus).add(bases);
             }
         }
 
-        return new SequenceCount(minCount, seqCountsList);
+        return new SequenceCount(minFilterDepth, minEvidenceFactor, seqCountsByLoci);
     }
 
-    public static SequenceCount aminoAcids(double minCount, final List<Fragment> fragments)
+    public static SequenceCount aminoAcids(final int minFilterDepth, final double minEvidenceFactor, final Collection<Fragment> fragments)
     {
-        int length = fragments.stream().mapToInt(x -> x.maxAminoAcidLocus()).max().orElse(0) + 1;
-
-        Map<String,Integer>[] seqCountsList = new Map[length];
-        for(int i = 0; i < length; ++i)
-        {
-            seqCountsList[i] = Maps.newHashMap();
-        }
-
+        NavigableMap<Integer, Multiset<String>> seqCountsByLoci = Maps.newTreeMap();
         for(Fragment fragment : fragments)
         {
-            for(int index = 0; index < fragment.aminoAcidLoci().size(); ++index)
+            for(AminoAcid aminoAcid : fragment.aminoAcidsByLoci().values())
             {
-                int locus = fragment.aminoAcidLoci().get(index);
-                String aminoAcid = fragment.aminoAcids().get(index);
-                increment(seqCountsList, locus, aminoAcid);
+                int locus = aminoAcid.locus();
+                String acid = aminoAcid.acid();
+                seqCountsByLoci.computeIfAbsent(locus, k -> HashMultiset.create());
+                seqCountsByLoci.get(locus).add(acid);
             }
         }
 
-        return new SequenceCount(minCount, seqCountsList);
+        return new SequenceCount(minFilterDepth, minEvidenceFactor, seqCountsByLoci);
     }
 
-    public List<Integer> heterozygousLoci()
+    public Multiset<String> get(final int locus)
     {
-        List<Integer> indices = Lists.newArrayList();
+        return mSeqCountsByLoci.getOrDefault(locus, HashMultiset.create());
+    }
 
-        for(int i = 0; i < mSeqCountsList.length; ++i)
+    public NavigableMap<Integer, Multiset<String>> seqCountsByLoci()
+    {
+        return mSeqCountsByLoci;
+    }
+
+    public NavigableSet<Integer> heterozygousLoci()
+    {
+        return mSeqCountsByLoci.keySet().stream()
+                .filter(this::isHeterozygous)
+                .collect(Collectors.toCollection(Sets::newTreeSet));
+    }
+
+    public NavigableSet<Integer> homozygousLoci()
+    {
+        return mSeqCountsByLoci.keySet().stream()
+                .filter(this::isHomozygous)
+                .collect(Collectors.toCollection(Sets::newTreeSet));
+    }
+
+    private boolean isHomozygous(final int locus)
+    {
+        return getMinEvidenceSequences(locus).size() == 1;
+    }
+
+    private boolean isHeterozygous(final int locus)
+    {
+        return getMinEvidenceSequences(locus).size() > 1;
+    }
+
+    public List<String> getMinEvidenceSequences(final int locus)
+    {
+        return getMinEvidenceSequences(locus, null);
+    }
+
+    public List<String> getMinEvidenceSequences(final int locus, @Nullable final Double minEvidenceFactor)
+    {
+        Multiset<String> seqCounts = mSeqCountsByLoci.get(locus);
+        if(seqCounts == null)
         {
-            if(isHeterozygous(i))
-                indices.add(i);
-        }
-
-        return indices;
-    }
-
-    public List<Integer> homozygousIndices()
-    {
-        List<Integer> indices = Lists.newArrayList();
-
-        for(int i = 0; i < mSeqCountsList.length; ++i)
-        {
-            if(isHomozygous(i))
-                indices.add(i);
-        }
-
-        return indices;
-    }
-
-    private boolean isHomozygous(int index)
-    {
-        Map<String,Integer> seqCounts = get(index);
-        return seqCounts.values().stream().filter(x -> x >= mMinCount).count() == 1;
-    }
-
-    private boolean isHeterozygous(int index)
-    {
-        Map<String,Integer> seqCounts = get(index);
-        return seqCounts.values().stream().filter(x -> x >= mMinCount).count() > 1;
-    }
-
-    public List<String> getMinCountSequences(int index)
-    {
-        if(index >= mSeqCountsList.length)
             return Lists.newArrayList();
+        }
 
-        Map<String,Integer> seqCounts = get(index);
+        int support = seqCounts.size();
+        if(support < mMinFilterDepth)
+        {
+            return seqCounts.entrySet().stream()
+                    .map(Multiset.Entry::getElement)
+                    .collect(Collectors.toList());
+        }
 
+        double factor = minEvidenceFactor == null ? mMinEvidenceFactor : minEvidenceFactor;
+        int evidenceMinCount = (int) ceil(support * factor);
         return seqCounts.entrySet().stream()
-                .filter(x -> x.getValue() >= mMinCount)
-                .map(x -> x.getKey()).collect(Collectors.toList());
+                .filter(x -> x.getCount() >= evidenceMinCount)
+                .map(Multiset.Entry::getElement)
+                .collect(Collectors.toList());
     }
 
-    public String getMaxCountSequence(int index)
+    public String getMaxCountSequence(final int locus)
     {
-        Map<String,Integer> seqCounts = get(index);
-
-        String sequence = "-";
-        int maxCountSeq = 0;
-
-        for(Map.Entry<String,Integer> entry : seqCounts.entrySet())
+        Multiset<String> seqCounts = mSeqCountsByLoci.get(locus);
+        if(seqCounts == null || seqCounts.isEmpty())
         {
-            if(entry.getValue() > maxCountSeq)
-            {
-                sequence = entry.getKey();
-                maxCountSeq = entry.getValue();
-            }
+            return "-";
         }
 
-        return sequence;
+        Multiset.Entry<String> maxEntry = seqCounts.entrySet().stream().max(Comparator.comparingInt(Multiset.Entry::getCount)).orElse(null);
+        return maxEntry.getElement();
     }
 
-    public int depth(int index)
+    public int depth(final int locus)
     {
-        Map<String,Integer> seqCounts = get(index);
-        return seqCounts.values().stream().mapToInt(x -> x).sum();
+        return mSeqCountsByLoci.get(locus).size();
     }
 
-    private static void increment(Map<String,Integer>[] seqCountsList, int index, String aminoAcid)
+    public static Map<String, Map<Integer, Set<String>>> extractHeterozygousLociSequences(final Map<String, SequenceCount> geneCountsMap,
+            final Collection<HlaSequenceLoci> extraSeqLoci)
     {
-        if(seqCountsList[index] == null)
-        {
-            seqCountsList[index] = Maps.newHashMap();
-        }
-
-        Map<String,Integer> seqCounts = seqCountsList[index];
-
-        Integer count = seqCounts.get(aminoAcid);
-        if(count != null)
-            seqCounts.put(aminoAcid, count + 1);
-        else
-            seqCounts.put(aminoAcid, 1);
-    }
-
-    public static Map<String,Map<Integer,Set<String>>> extractHeterozygousLociSequences(
-            final Map<String,SequenceCount> geneCountsMap, double minCount, final List<HlaSequenceLoci> extraSeqLoci)
-    {
-        Map<String,Map<Integer,Set<String>>> geneHetLociMap = Maps.newHashMap();
-
-        for(Map.Entry<String,SequenceCount> geneEntry : geneCountsMap.entrySet())
+        Map<String, Map<Integer, Set<String>>> geneHetLociMap = Maps.newHashMap();
+        for(Map.Entry<String, SequenceCount> geneEntry : geneCountsMap.entrySet())
         {
             String gene = shortGeneName(geneEntry.getKey());
             SequenceCount sequenceCounts = geneEntry.getValue();
-            List<HlaSequenceLoci> geneExtraSeqLoci = extraSeqLoci.stream().filter(x -> x.Allele.Gene.equals(gene)).collect(Collectors.toList());
-            Map<Integer,Set<String>> hetLociMap = sequenceCounts.extractHeterozygousLociSequences(minCount, geneExtraSeqLoci);
+            List<HlaSequenceLoci> geneExtraSeqLoci = extraSeqLoci.stream().filter(x -> x.Allele.Gene.equals(gene)).toList();
+            Map<Integer, Set<String>> hetLociMap = sequenceCounts.extractHeterozygousLociSequences(geneExtraSeqLoci);
             geneHetLociMap.put(gene, hetLociMap);
         }
 
         // for recovered alleles (the extra-seq-loci), any additional amino acid location prior to 337 needs to be evaluated against
         // all 3 genes and added to all of them. From 338 onwards, A and B should be shared with each other, but C needs to be separate.
-        Map<Integer,Set<String>> aHetLociMap = geneHetLociMap.get(GENE_A);
-        Map<Integer,Set<String>> bHetLociMap = geneHetLociMap.get(GENE_B);
-        Map<Integer,Set<String>> cHetLociMap = geneHetLociMap.get(GENE_C);
+        Map<Integer, Set<String>> aHetLociMap = geneHetLociMap.get(GENE_A);
+        Map<Integer, Set<String>> bHetLociMap = geneHetLociMap.get(GENE_B);
+        Map<Integer, Set<String>> cHetLociMap = geneHetLociMap.get(GENE_C);
 
         for(int locus = 0; locus <= 348; ++locus)
         {
@@ -218,7 +209,9 @@ public final class SequenceCount
             if(locus <= 337)
             {
                 if(aSeqs.isEmpty() && bSeqs.isEmpty() && cSeqs.isEmpty())
+                {
                     continue;
+                }
 
                 Set<String> combinedSeqs = Sets.newHashSet();
                 combinedSeqs.addAll(aSeqs);
@@ -232,7 +225,9 @@ public final class SequenceCount
             {
                 // only A and B
                 if(aSeqs.isEmpty() && bSeqs.isEmpty())
+                {
                     continue;
+                }
 
                 Set<String> combinedSeqs = Sets.newHashSet();
                 combinedSeqs.addAll(aSeqs);
@@ -245,19 +240,19 @@ public final class SequenceCount
         return geneHetLociMap;
     }
 
-    private Map<Integer,Set<String>> extractHeterozygousLociSequences(double minCount, final List<HlaSequenceLoci> extraSequences)
+    private Map<Integer, Set<String>> extractHeterozygousLociSequences(final List<HlaSequenceLoci> extraSequences)
     {
-        Map<Integer,Set<String>> lociSeqMap = Maps.newLinkedHashMap();
-
-        for(int locus = 0; locus < mSeqCountsList.length; ++locus)
+        NavigableMap<Integer, Set<String>> lociSeqMap = Maps.newTreeMap();
+        for(Map.Entry<Integer, Multiset<String>> entry : mSeqCountsByLoci.entrySet())
         {
-            Set<String> aminoAcids = mSeqCountsList[locus].entrySet().stream()
-                    .filter(x -> x.getValue() >= minCount).map(x -> x.getKey()).collect(Collectors.toSet());
-
+            int locus = entry.getKey();
+            Set<String> aminoAcids = Sets.newHashSet(getMinEvidenceSequences(locus));
             for(HlaSequenceLoci extraSeqLoci : extraSequences)
             {
                 if(locus >= extraSeqLoci.length())
+                {
                     continue;
+                }
 
                 String lociSeq = extraSeqLoci.sequence(locus);
                 aminoAcids.add(lociSeq);
@@ -278,34 +273,24 @@ public final class SequenceCount
         {
             BufferedWriter writer = createBufferedWriter(fileName, false);
 
-            for(int i = 0; i < getLength(); ++i)
+            for(Map.Entry<Integer, Multiset<String>> seqCountsEntry : mSeqCountsByLoci.entrySet())
             {
+                int locus = seqCountsEntry.getKey();
+                Multiset<String> seqCounts = seqCountsEntry.getValue();
+
                 StringJoiner lineBuilder = new StringJoiner("\t");
-                lineBuilder.add(String.valueOf(i));
+                lineBuilder.add(String.valueOf(locus));
 
-                Map<String,Integer> seqMap = mSeqCountsList[i];
+                Iterator<Multiset.Entry<String>> sortedCounts = seqCounts.entrySet().stream()
+                        .sorted(Comparator.comparingInt((Multiset.Entry<String> x) -> x.getCount()).reversed())
+                        .limit(5)
+                        .iterator();
 
-                List<Pair<String,Integer>> sortedCounts = Lists.newArrayList();
-
-                for(Map.Entry<String,Integer> entry : seqMap.entrySet())
+                while(sortedCounts.hasNext())
                 {
-                    int index = 0;
-                    while(index < sortedCounts.size())
-                    {
-                        if(entry.getValue() > sortedCounts.get(index).getSecond())
-                            break;
-
-                        ++index;
-                    }
-
-                    sortedCounts.add(index, Pair.create(entry.getKey(), entry.getValue()));
-                }
-
-                for(int j = 0; j <= min(5, sortedCounts.size() - 1); ++j)
-                {
-                    Pair<String,Integer> pair = sortedCounts.get(j);
-                    lineBuilder.add(pair.getFirst());
-                    lineBuilder.add(String.valueOf(pair.getSecond()));
+                    Multiset.Entry<String> count = sortedCounts.next();
+                    lineBuilder.add(count.getElement());
+                    lineBuilder.add(String.valueOf(count.getCount()));
                 }
 
                 writer.write(lineBuilder.toString());
